fix: updating option color to initial for more readable content

--- a/style.css
+++ b/style.css
@@ -53,6 +53,10 @@ nav ul li a {
   color: #fff;
 }
 
+option{
+  color : initial;
+}
+
 #mobile {
   width: 50px;
   height: 50px;
